pc send command to start or finish PCBAAutoActivity, this function is ok.

--- a/auto-tool-520/citApk/MeigRS32/app/src/main/AndroidManifest.xml
+++ b/auto-tool-520/citApk/MeigRS32/app/src/main/AndroidManifest.xml
@@ -123,6 +123,11 @@
             android:exported="true"
             android:configChanges="orientation|screenSize|mcc|mnc" />
         <activity
+            android:name=".activity.PCBAAutoActivity"
+            android:exported="true"
+            android:launchMode="singleTask"
+            android:configChanges="orientation|screenSize|mcc|mnc" />
+        <activity
             android:name=".activity.PCBASignalActivity"
             android:exported="true"
             android:configChanges="orientation|screenSize|mcc|mnc" />
