modify scan fignerprint touch

--- a/auto-tool-520/citApk/MeigRS32/app/src/main/AndroidManifest.xml
+++ b/auto-tool-520/citApk/MeigRS32/app/src/main/AndroidManifest.xml
@@ -123,11 +123,6 @@
             android:exported="true"
             android:configChanges="orientation|screenSize|mcc|mnc" />
         <activity
-            android:name=".activity.PCBAAutoActivity"
-            android:exported="true"
-            android:launchMode="singleTask"
-            android:configChanges="orientation|screenSize|mcc|mnc" />
-        <activity
             android:name=".activity.PCBASignalActivity"
             android:exported="true"
             android:configChanges="orientation|screenSize|mcc|mnc" />
@@ -883,6 +878,18 @@
             android:configChanges="orientation|screenSize|mcc|mnc" />
         <activity
             android:name=".activity.UARTActivity"
+            android:configChanges="orientation|screenSize|mcc|mnc" />
+
+
+        <activity
+            android:name=".activity.PCBAAutoActivity"
+            android:exported="true"
+            android:launchMode="singleTask"
+            android:configChanges="orientation|screenSize|mcc|mnc" />
+        <activity
+            android:name=".activity.PCBAAutoTouchTestActivity"
+            android:exported="true"
+            android:launchMode="singleTask"
             android:configChanges="orientation|screenSize|mcc|mnc" />
 
         <receiver android:name=".activity.MeigRS32BroadcastReceiver">
