modify speaker audio file, modify tool judgement test item, modify led

--- a/auto-tool-520/citApk/MeigRS32/app/src/main/AndroidManifest.xml
+++ b/auto-tool-520/citApk/MeigRS32/app/src/main/AndroidManifest.xml
@@ -334,6 +334,7 @@
             android:configChanges="orientation|screenSize|mcc|mnc" />
         <activity
             android:name=".activity.EarPhoneActivity"
+            android:launchMode="singleTask"
             android:configChanges="orientation|screenSize|mcc|mnc" />
         <!--added by Yar for Speakloop begin-->
         <activity
